--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -3,6 +3,25 @@
 
 @string{aps = {American Physical Society,}}
 
+
+@article{DBLP:journals/corr/abs-2402-09132,
+  author       = {Lukas Struppek and
+                  Minh Hieu Le and
+                  Dominik Hintersdorf and
+                  Kristian Kersting},
+  title        = {Exploring the Adversarial Capabilities of Large Language Models},
+  journal      = {CoRR},
+  volume       = {abs/2402.09132},
+  year         = {2024},
+  url          = {https://doi.org/10.48550/arXiv.2402.09132},
+  doi          = {10.48550/ARXIV.2402.09132},
+  eprinttype    = {arXiv},
+  eprint       = {2402.09132},
+  timestamp    = {Mon, 19 Feb 2024 15:25:43 +0100},
+  biburl       = {https://dblp.org/rec/journals/corr/abs-2402-09132.bib},
+  bibsource    = {dblp computer science bibliography, https://dblp.org}
+}
+
 @book{einstein1956investigations,
   bibtex_show={true},
   title={Investigations on the Theory of the Brownian Movement},
