add pdf and link to paper

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -19,7 +19,9 @@
   eprint       = {2402.09132},
   timestamp    = {Mon, 19 Feb 2024 15:25:43 +0100},
   biburl       = {https://dblp.org/rec/journals/corr/abs-2402-09132.bib},
-  bibsource    = {dblp computer science bibliography, https://dblp.org}
+  bibsource    = {dblp computer science bibliography, https://dblp.org},
+  url={https://openreview.net/forum?id=ly0hNBwhia&referrer=%5Bthe%20profile%20of%20Kristian%20Kersting%5D(%2Fprofile%3Fid%3D~Kristian_Kersting1)},
+  pdf={10_Exploring_the_Adversarial_C.pdf},
 }
 
 @book{einstein1956investigations,
